spacer changed gRNA and added exportAllgRNAs and gRNA.pattern
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CRISPRseek@87277 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/CRISPRseek.Rnw
+++ b/vignettes/CRISPRseek.Rnw
@@ -38,19 +38,20 @@ such as zinc finger nucleases and TALENs. Derivatives of CRISPR-Cas9 complexes
 include nickases, which only cleave one DNA strand, and gene expression 
 regulators, which lack any DNA cleavage activity but can increase or decrease 
 gene transcription. CRISPR-Cas9 nucleases are composed of an RNA-protein 
-complex that can target a variable sequence (the "spacer") that is directly 
-adjacent to a constant motif (the "PAM" sequence). In the most widely use 
-version from the species Streptococcus pyogenes, the spacer is composed of a 
-variable region of 20 bases and the preferred PAM sequence is an adjacent 3 
-base sequence of NGG (or NAG with lower activity). One potential limitation 
-for CRISPR-Cas9 nucleases is that they can cleave at some sequences that do 
-not precisely match the sequence targeted by the spacer sequence. Thus, an 
-important consideration for the design and application of CRISPR-Cas9 nucleases 
-is the identification of spacer regions with low rates of off-target cleavage. 
+complex that can target a variable sequence (guide RNA, abbreviated as "gRNA")
+that is directly adjacent to a constant motif (the "PAM" sequence). In the 
+most widely use version from the species Streptococcus pyogenes, the gRNA 
+is composed of a variable region of 20 bases and the preferred PAM sequence 
+is an adjacent 3 base sequence of NGG (or NAG with lower activity). One 
+potential limitation for CRISPR-Cas9 nucleases is that they can cleave at 
+some sequences that do not precisely match the sequence targeted by the 
+gRNA sequence. Thus, an important consideration for the design and application
+of CRISPR-Cas9 nucleases is the identification of gRNA regions with low 
+rates of off-target cleavage. 
 
 Several computational analyses can assist with the construction and application 
 of CRISPR-Cas9 nucleases with high on-target and low off-target cleavage. 
-First, spacer sequences can be evaluated for possible off-target sequences in 
+First, gRNA sequences can be evaluated for possible off-target sequences in 
 the target genome. Second, sequences flanking possible off-target sequences 
 can be reported to assist in the experimental analysis of off-target cleavage 
 and to determine if these sequences are within critical regions for gene 
@@ -71,24 +72,24 @@ with a user defined maximum number of mismatches, calculate the score of each
 off-target based on mismatches in the off-target and a penalty weight 
 matrix, filter off-targets with user-defined criteria, and annotate off-targets 
 with flanking sequences, and whether located in exon or not. Several reports 
-are generated including a summary report with spacers ranked by total topN 
-off-target score, restriction enzyme cut sites and  possible paired spacers. 
-Detailed paired spacers information, restriction enzyme cut sites, and 
+are generated including a summary report with gRNAs ranked by total topN 
+off-target score, restriction enzyme cut sites and  possible paired gRNAs. 
+Detailed paired gRNAs information, restriction enzyme cut sites, and 
 off-target sequences and scores are stored in separate files in the output 
 directory specified by the user. In total, four tab delimited files are 
 generated in the output directory: OfftargetAnalysis.xls (off-target details), 
-Summary.xls (spacer summary), REcutDetails.xls (restriction enzyme cut sites 
-of each spacer), and pairedSpacers.xls (potential paired spacers). These 
+Summary.xls (gRNA summary), REcutDetails.xls (restriction enzyme cut sites 
+of each gRNA), and pairedgRNAs.xls (potential paired gRNAs). These 
 reports provide a comprehensive set of information to identify, select and 
 utilize Streptococcus pyogenes CRISPR-Cas9 nucleases and their derivatives. 
-The package can also be readily modified to accept different spacer and PAM 
+The package can also be readily modified to accept different gRNA and PAM 
 sequence requirements for CRISPR-Cas9 complexes from other bacterial species 
 that can be used to target alternative genomic sequences. The package can also 
 be modified to incorporate improved weight matrices for scoring off-target 
 sequences as new experimental and computational results become available for 
 CRISPR-Cas9 nucleases for Streptococcus pyogenes and other species.
 \section{Examples of using CRISPRseek}
-In this guide, we will illustrate five different spacer search scenarios with a 
+In this guide, we will illustrate five different gRNA search scenarios with a 
 human sequence. First load \Biocpkg{CRISPRseek}, 
 \Biocannopkg{BSgenome.Hsapiens.UCSC.hg19} and 
 \Biocannopkg{TxDb.Hsapiens.UCSC.hg19.knownGene}. Then specify the sequence 
@@ -128,22 +129,22 @@ REpatternFile <- system.file('extdata', 'NEBenzymes.fa', package = 'CRISPRseek')
 \end{scriptsize}
 
 
-\subsection{Scenario 1: Finding paired spacers with restriction enzyme cut 
+\subsection{Scenario 1: Finding paired gRNAs with restriction enzyme cut 
 site(s)}
-Paired spacers in proper spacing and orientation give more specificity and 
-spacers overlap with restriction enzyme cut sites facilitates cleavage 
+Paired gRNAs in proper spacing and orientation give more specificity and 
+gRNAs overlap with restriction enzyme cut sites facilitates cleavage 
 monitoring. Calling the function \Rfunction{offTargetAnalysis} with 
-findPairedSpacerOnly=TRUE and findSpacersWithREcutOnly=TRUE results in 
-searching, scoring and annotating spacers that are in paired configuration 
+findPairedgRNAOnly=TRUE and findgRNAsWithREcutOnly=TRUE results in 
+searching, scoring and annotating gRNAs that are in paired configuration 
 and at least one of the pairs overlap a restriction enzyme cut site. To be 
-considered as a pair, gap between forward spacer and the corresponding reverse 
-spacer needs to be (min.gap, max.gap) inclusive and the reverse spacer must 
-sit before the forward spacer. The default (min.gap, max.gap) is (0,20). 
+considered as a pair, gap between forward gRNA and the corresponding reverse 
+gRNA needs to be (min.gap, max.gap) inclusive and the reverse gRNA must 
+sit before the forward gRNA. The default (min.gap, max.gap) is (0,20). 
 Please note that chromToSearch is set to chrX here for speed purpose, usually 
-you would set it to all, which is the default. In order for a spacer to be 
+you would set it to all, which is the default. In order for a gRNA to be 
 considered overlap with restriction enzyme cut site, the enzyme cut pattern 
-must overlap with one of the spacer positions specified in 
-overlap.spacer.positions, default position 17 and 18. Please note that 
+must overlap with one of the gRNA positions specified in 
+overlap.gRNA.positions, default position 17 and 18. Please note that 
 max.mismatch allowed for off-target finding is set to 4 by default, set it 
 to a larger number will significantly slow down the search.  For detailed 
 parameter settings using function \Rfunction{offTargetAnalysis}, please type 
@@ -151,62 +152,62 @@ help(offTargetAnalysis)
 
 \begin{scriptsize}
 <<>>=
-offTargetAnalysis(inputFilePath, findSpacersWithREcutOnly = TRUE, 
-REpatternFile = REpatternFile, findPairedSpacerOnly = TRUE, 
-BSgenomeName = Hsapiens, chromToSearch ="chrX", min.gap = 0, max.gap = 20, 
-txdb = TxDb.Hsapiens.UCSC.hg19.knownGene, max.mismatch = 0, 
-overlap.spacer.positions = c(17, 18), outputDir = outputDir,
+offTargetAnalysis(inputFilePath, findgRNAsWithREcutOnly = TRUE, 
+REpatternFile = REpatternFile, findPairedgRNAOnly = TRUE, 
+BSgenomeName = Hsapiens, chromToSearch ="chrX", min.gap = 0, max.gap = 20,
+txdb = TxDb.Hsapiens.UCSC.hg19.knownGene, max.mismatch = 0,
+overlap.gRNA.positions = c(17, 18), outputDir = outputDir,
 overwrite = TRUE)
 @
 \end{scriptsize}
 
-\subsection{Scenario 2: Finding paired spacers with/without restriction enzyme 
+\subsection{Scenario 2: Finding paired gRNAs with/without restriction enzyme 
 cut site(s)}
 Calling the function \Rfunction{offTargetAnalysis} with 
-findPairedSpacerOnly = TRUE and findSpacersWithREcutOnly = FALSE results in 
-searching, scoring and annotating spacers that are in paired configuration 
-without requiring overlap any restriction enzyme cut site. The spacers will 
+findPairedgRNAOnly = TRUE and findgRNAsWithREcutOnly = FALSE results in 
+searching, scoring and annotating gRNAs that are in paired configuration 
+without requiring overlap any restriction enzyme cut site. The gRNAs will 
 be annotated with restriction enzyme cut sites for users to review later.
 
 \begin{scriptsize}
 <<>>=
-offTargetAnalysis(inputFilePath, findSpacersWithREcutOnly = FALSE,
-REpatternFile = REpatternFile,findPairedSpacerOnly = TRUE, 
-BSgenomeName = Hsapiens, chromToSearch = "chrX", 
+offTargetAnalysis(inputFilePath, findgRNAsWithREcutOnly = FALSE,
+REpatternFile = REpatternFile,findPairedgRNAOnly = TRUE, 
+BSgenomeName = Hsapiens, chromToSearch = "chrX",
 txdb = TxDb.Hsapiens.UCSC.hg19.knownGene, 
 max.mismatch = 1, outputDir = outputDir, overwrite = TRUE)
 @
 \end{scriptsize}
 
-\subsection{Scenario 3: Finding all spacers with restriction enzyme cut site(s)}
+\subsection{Scenario 3: Finding all gRNAs with restriction enzyme cut site(s)}
 Calling the function \Rfunction{offTargetAnalysis} with 
-findPairedSpacerOnly=FALSE and findSpacersWithREcutOnly = TRUE results in 
-searching, scoring and annotating all spacers (paired and not paired) overlap 
-restriction enzyme cut site(s) and off-targets. The spacers will be annotated 
+findPairedgRNAOnly=FALSE and findgRNAsWithREcutOnly = TRUE results in 
+searching, scoring and annotating all gRNAs (paired and not paired) overlap 
+restriction enzyme cut site(s) and off-targets. The gRNAs will be annotated 
 with paired information for users to review later.
 
 \begin{scriptsize}
 <<>>=
-offTargetAnalysis(inputFilePath, findSpacersWithREcutOnly = TRUE,
-REpatternFile = REpatternFile, findPairedSpacerOnly = FALSE, 
+offTargetAnalysis(inputFilePath, findgRNAsWithREcutOnly = TRUE,
+REpatternFile = REpatternFile, findPairedgRNAOnly = FALSE, 
 BSgenomeName = Hsapiens, chromToSearch = "chrX", 
-txdb = TxDb.Hsapiens.UCSC.hg19.knownGene, 
+txdb = TxDb.Hsapiens.UCSC.hg19.knownGene,
 max.mismatch = 1, outputDir = outputDir, overwrite = TRUE)
 @
 \end{scriptsize}
 
-\subsection{Scenario 4: Finding all spacers}
+\subsection{Scenario 4: Finding all gRNAs}
 Calling the function \Rfunction{offTargetAnalysis} with 
-findPairedSpacerOnly = FALSE and findSpacersWithREcutOnly = FALSE results in 
-searching, scoring and annotating all spacers and off-targets. The spacers will 
+findPairedgRNAOnly = FALSE and findgRNAsWithREcutOnly = FALSE results in 
+searching, scoring and annotating all gRNAs and off-targets. The gRNAs will 
 be annotated with paired information and restriction enzyme cut sites for users 
 to review later.  Please note that this search will be the slowest among all 
 type of searches aforementioned.
 
 \begin{scriptsize}
 <<>>=
-offTargetAnalysis(inputFilePath, findSpacersWithREcutOnly = FALSE,
-REpatternFile = REpatternFile,findPairedSpacerOnly = FALSE, 
+offTargetAnalysis(inputFilePath, findgRNAsWithREcutOnly = FALSE,
+REpatternFile = REpatternFile,findPairedgRNAOnly = FALSE, 
 BSgenomeName = Hsapiens, chromToSearch = "chrX", 
 txdb = TxDb.Hsapiens.UCSC.hg19.knownGene, 
 max.mismatch = 1, outputDir = outputDir, overwrite = TRUE)
@@ -214,41 +215,54 @@ max.mismatch = 1, outputDir = outputDir, overwrite = TRUE)
 \end{scriptsize}
 
 \subsection{Scenario 5: Target and off-target analysis for user specified 
-spacers}
-Calling the function \Rfunction{offTargetAnalysis} with findSpacers = FALSE 
+gRNAs}
+Calling the function \Rfunction{offTargetAnalysis} with findgRNAs = FALSE 
 results in target and off-target searching, scoring and annotating for the 
-input spacers. The spacers will be annotated with restriction enzyme cut sites 
+input gRNAs. The gRNAs will be annotated with restriction enzyme cut sites 
 for users to review later. However, paired information will not be available. 
 
 \begin{scriptsize}
 <<>>=
-spacerFilePath <- system.file('extdata', 'testHsap_GATA1_ex2_gRNA1.fa',
+gRNAFilePath <- system.file('extdata', 'testHsap_GATA1_ex2_gRNA1.fa',
 package = 'CRISPRseek')
-offTargetAnalysis(inputFilePath = spacerFilePath, 
-findSpacersWithREcutOnly = TRUE, REpatternFile = REpatternFile,
-findPairedSpacerOnly = FALSE, findSpacers = FALSE,
+offTargetAnalysis(inputFilePath = gRNAFilePath, 
+findgRNAsWithREcutOnly = TRUE, REpatternFile = REpatternFile,
+findPairedgRNAOnly = FALSE, findgRNAs = FALSE,
 BSgenomeName = Hsapiens, chromToSearch = 'chrX', 
 txdb = TxDb.Hsapiens.UCSC.hg19.knownGene, 
 max.mismatch = 1, outputDir = outputDir, overwrite = TRUE)
 @
 \end{scriptsize}
 
-\subsection{ Scenario 6. Quick spacer finding  without target or off-target
+\subsection{ Scenario 6. Quick gRNA finding  without target or off-target
 analysis}
 Calling the function \Rfunction{offTargetAnalysis} with chromToSearch = "" 
-results in quick spacer search without performing on-target and off-target
-analysis. Parameters findSpacersWithREcutOnly and findPairedSpacerOnly can
-be tuned to indicate whether searching for spacers overlap restriction enzyme
-cut sites or not, and whether searching for spacers in paired configuration
+results in quick gRNA search without performing on-target and off-target
+analysis. Parameters findgRNAsWithREcutOnly and findPairedgRNAOnly can
+be tuned to indicate whether searching for gRNAs overlap restriction enzyme
+cut sites or not, and whether searching for gRNAs in paired configuration
 or not. 
 \begin{scriptsize}
 <<>>=
-offTargetAnalysis(inputFilePath, findSpacersWithREcutOnly = TRUE,
-REpatternFile = REpatternFile,findPairedSpacerOnly = TRUE,
+offTargetAnalysis(inputFilePath, findgRNAsWithREcutOnly = TRUE,
+REpatternFile = REpatternFile,findPairedgRNAOnly = TRUE,
 chromToSearch = "", outputDir = outputDir, overwrite = TRUE)
 @
 \end{scriptsize}
-
+\subsection{Scenario 7. Find potential gRNAs preferentially targeting one of two alleles without running time-consuming off-target analysis on all possible gRNAs.}
+Below is an example to search for all gRNAs that target at least one of the alleles. Two files are provided containing sequences that differ by a single nucleotide polymorphism (SNP). The results are saved in file scoresFor2InputSequences.xls in outputDir directory. 
+\begin{scriptsize}
+<<>>=
+inputFile1Path <- system.file("extdata", "rs362331C.fa",  package = "CRISPRseek")
+inputFile2Path <- system.file("extdata", "rs362331T.fa",  package = "CRISPRseek") 
+REpatternFile <- system.file("extdata", "NEBenzymes.fa", package = "CRISPRseek")
+seqs <- compare2Sequences(inputFile1Path, inputFile2Path, 
+    outputDir = outputDir , REpatternFile = REpatternFile, 
+    overwrite = TRUE)
+seqs
+@
+\end{scriptsize}
+XXX.fa and YYY.fa are the names of the two input files. The output file will list all of the possible gRNA sequences for each of the two input sequences and provide a cleavage score for each of the two input sequences. To preferentially target one allele, select gRNA sequences that have the lowest score for the other allele. Selected gRNAs can then be examined for off-target sequences as described in Step 6.
 \section{References}
 \begin{thebibliography}{99}
 \bibitem[Mali P. et al., 2013]{Mali et al., 2013} Mali P. et al., CAS9 
@@ -257,9 +271,7 @@ for cooperative genome engineering. Nat Biotechnol. 2013. 31(9):833-8
 \bibitem[ Hsu, P.D et al., 2013]{Hsu et al., 2013} Hsu, P.D. et al., DNA 
 targeting specificity of rNA-guided Cas9 nucleases. Nat Biotechnol. 
 2013. 31:827-834. 
-\bibitem[Lihua Julie Zhu, Michael Brodsky]{Zhu and Brodsky}Lihua Julie Zhu 
-and Michael Brodsky. CRISPRseek: A Bioconductor package for designing, 
-scoring and annotating spacers in CRISPR-Cas9 system. (In preparation)
+\bibitem[Lihua Julie Zhu, Benjamin R. Holmes, Neil Aronin and Michael Brodsky]{Zhu et al}Lihua Julie Zhu, Benjamin R. Holmes, Neil Aronin and Michael Brodsky. CRISPRseek: A Bioconductor package to help with the design of guide RNAs in CRISPR-Cas9 systems for targeted genome editing. (In preparation)
 \end{thebibliography}
 
 \section{Session Info}
