bug fix of topNoffTargetTotalScore column missing sometimes
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CRISPRseek@94577 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -5,3 +5,8 @@ NEW FEATURE
      o Added new optional parameter orgAnn in offTargetAnalysis 
      o Added gene ID and optional gene symbol in off-target output file 
      o Added gRNA target region, GC content of gRNA and number of Ts in the last 4 postion of gRNA (not including PAM sequence) in the summary output file
+
+CHANGES IN VERSION 1.3.5
+------------------------
+BUG FIX
+     o TopN offtarget total score was sometimes missing for sequences containing gRNAs with less than 6 offtargets in version 1.3.3 
