added many to many sequences comparisons as well as directional comparisons in compare2Sequences
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CRISPRseek@94777 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -10,3 +10,9 @@ CHANGES IN VERSION 1.3.5
 ------------------------
 BUG FIX
      o TopN offtarget total score was sometimes missing for sequences containing gRNAs with less than 6 offtargets in version 1.3.3 
+
+CHANGES IN VERSION 1.3.7
+------------------------
+NEW FEATURE
+     o Added searchDirection to compare2Sequences to allow search one against the other and many to many sequence search
+     o Added exception handling to catch no gRNA found error in compare2Sequences
