--- a/inst/NEWS
+++ b/inst/NEWS
@@ -16,3 +16,8 @@ CHANGES IN VERSION 1.3.7
 NEW FEATURE
      o Added searchDirection to compare2Sequences to allow search one against the other and many to many sequence search
      o Added exception handling to catch no gRNA found error in compare2Sequences
+
+CHANGES IN VERSION 1.3.8
+------------------------
+NEW FEATURE
+     o Added calculategRNAefficiency to calculate gRNA cleavage efficiency using DoenchNBT2014 predictive logistic model
