--- a/inst/NEWS
+++ b/inst/NEWS
@@ -21,3 +21,9 @@ CHANGES IN VERSION 1.3.8
 ------------------------
 NEW FEATURE
      o Added calculategRNAefficiency to calculate gRNA cleavage efficiency using DoenchNBT2014 predictive logistic model
+
+CHANGES IN VERSION 1.3.10
+------------------------
+NEW FEATURE
+     o gRNAs are automatically output to a bed file for view in the UCSC genome browser 
+
