--- a/inst/NEWS
+++ b/inst/NEWS
@@ -27,3 +27,7 @@ CHANGES IN VERSION 1.3.10
 NEW FEATURE
      o gRNAs are automatically output to a bed file for view in the UCSC genome browser 
 
+CHANGES IN VERSION 1.5.1
+------------------------
+NEW FEATURE
+     o annotateOfftargets is separated from filterOfftarget function and is faster as well
