gRNA efficacy calculation without offtarget search and in compare2sequences
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CRISPRseek@95625 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -31,3 +31,13 @@ CHANGES IN VERSION 1.5.1
 ------------------------
 NEW FEATURE
      o annotateOfftargets is separated from filterOfftarget function and is faster as well
+
+CHANGES IN VERSION 1.5.2
+------------------------
+NEW FEATURE
+     o filter gRNAs with one or both cut site overlap with RE pattern 
+
+CHANGES IN VERSION 1.5.3
+------------------------
+NEW FEATURE
+     o gRNA efficacy is calcualted for compare2Sequence function and for offTargetAnalysis with chromToSearch="" 
