changed gRNA name to contain Cas9 cut site
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CRISPRseek@95648 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -41,3 +41,8 @@ CHANGES IN VERSION 1.5.3
 ------------------------
 NEW FEATURE
      o gRNA efficacy is calcualted for compare2Sequence function and for offTargetAnalysis with chromToSearch="" 
+
+CHANGES IN VERSION 1.5.4
+------------------------
+NEW FEATURE
+     o rename the gRNAs containing Cas9 cut site instead of gRNA start end end. Also output the cut sites in genbank file 
