added useEfficacyFromInputSeq parameter in offTargetAnalysis function
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CRISPRseek@95873 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -46,3 +46,8 @@ CHANGES IN VERSION 1.5.4
 ------------------------
 NEW FEATURE
      o rename the gRNAs containing Cas9 cut site instead of gRNA start end end. Also output the cut sites in genbank file 
+
+CHANGES IN VERSION 1.5.5
+------------------------
+NEW FEATURE
+     o added useEfficacyFromInputSeq parameter in offTargetAnalysis function to allow user to select whether to use the gRNA efficacy calculated from the input sequence or the one from off-target analysis. This is useful when the input sequence is from a genome that is different from the off-target analysis genome 
