--- a/inst/NEWS
+++ b/inst/NEWS
@@ -57,3 +57,13 @@ CHANGES IN VERSION 1.5.6
 NEW FEATURE
      o added uniqueREsfor200total and uniqueREsfor100total in summary file to output RE sites that is unique in the 200 and 100 bp flanking gRNA region
 
+CHANGES IN VERSION 1.7.1
+------------------------
+BUG FIXES
+     o only search for gRNAs for input sequences longer than gRNA.size plus PAM size 
+
+CHANGES IN VERSION 1.7.3
+------------------------
+NEW FEATURE
+     o added parameter chromToExclude in offTargetAnalysis to specify chromosomes not to
+search for offtargets, which can be used to exclude haplotype blocks
